# dev-eficiente-ia-finlab

./: .gitignore  main.py  pyproject.toml
api/: main.py
api/config/: company_mappings.py  prompts.py  settings.py
api/models/: agent.py  rag.py  search.py
api/routers/: agent.py  rag.py  search.py
api/services/: agent.py  embeddings.py  rag.py  search.py  ticker_extractor.py
evaluations/: level-1-unit-tests.py  level-2-integration-tests.py  level-3-human-annonation.py  level-4-llm-as-judge.py
guardrails/: guardrails-demo-1.py  guardrails-demo-2.py  guardrails-demo-3.py
ingestion/: create_indexes.py  ingestion.py  news_ingestion.py
ingestion/utils/: edgar_client.py  news_client.py  simple_chunker.py
